# imxIconsApi

./: .env.sample  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  create_requirements_file.py  get_currect_version.py  pyproject.toml  run_api.py  setup.cfg
.github/install-dependencies/: action.yml
.github/run-linter/: action.yml
.github/run-tests/: action.yml
.github/workflows/: ci.yml  cleanup-old-runs.yml  main_imx-icons-api.yml  push-to-master.yml
imxIconApi/: __init__.py  api.py  api_description.py  exceptions.py  rateLimiter.py  startup.py
imxIconApi/routers/: icon_lib_page.py
imxIconApi/routers/v1/: feedback.py  get_icons.py  get_url.py
imxIconApi/templates/: icons.html  landing_page.html
tests/: helpers.py  test_api.py  test_create_asset_folder.py  test_endpoints.py  test_endpoints_core.py  test_endpoints_url.py  test_feedback.py  test_icon_lib_page.py  test_rate_limiter.py  test_url_endpoints.py
tests/fixtures/: api_clients.py
