[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "TRY", "UP"]

[tool.pytest.ini_options]
addopts = "--cov=imxIconApi --cov-report=term-missing"
asyncio_mode = "strict"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

[tool.isort]
profile = "black"

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_message = "🚀 Version {new_version}"
path = "imxIconApi/__init__.py"
tag_sign = false

[tool.hatch.envs.default]
path = ".venv"
python = "3.12"
dependencies = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "pre-commit",
    "filelock",
    "distlib",
    "httpx",
    "bumpversion",
    "zizmor",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.12"]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "isort imxIconApi/",
  "ruff format imxIconApi/",
  "ruff format --check imxIconApi/",
  "mypy imxIconApi/ --check-untyped-defs",

]
lint-check = [
  "ruff format --check imxIconApi/",
  "ruff check imxIconApi/",
  "mypy imxIconApi/ --check-untyped-defs",
  "zizmor .github/workflows/",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

bump-major = "bumpversion major"
bump-minor = "bumpversion minor"
bump-patch = "bumpversion patch"
bump-build = "bumpversion build"

[build-system]
requires = ["hatchling", "hatch-regex-commit", "isort"]
build-backend = "hatchling.build"

[project]
name = "imxIconApi"
authors = [
    { name = "Hzd", email = "Hazedd@users.noreply.github.com" },
    { name = "Open-Imx", email = "open-imx@organisation.noreply.github.com" },
]
description = "python imx insights module to get information from imx files"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
requires-python = ">=3.10"
dependencies = [
    "imxIcons",
    "fastapi",
    "slowapi",
    "jinja2",
    "gunicorn",
    "uvicorn",
]


[project.urls]
Source = "https://github.com/open-imx/ImxIconsApi"
